# potpatch

./: .gitignore  LICENSE  README.md  pyproject.toml  readme-first-for-dev.md
deprecated/: setup.cfg
doc/: atomic_unit.md  index.md  note_potpatch.md  note_src.md  tutorial.md
example/: potpatch.input
example/1.lda/1.bulk/2.scf/: atom.config
example/1.lda/2.supercell/2.scf/: etot.input
example/2.hse/2.supercell/2.scf/: vwr.Al
example/3.escan/1.bulk/: etot.input  vwr.Si
example/3.escan/2.supercell_08a/: IN.NONSCF  etot.input
example/Si_Al/: potpatch.input  vwr.Si.UPF
example/Si_Al/1.lda/1.bulk/2.scf/: etot.input
example/Si_Al/1.lda/2.supercell/1.relax/: etot.input
example/Si_Al/2.hse/1.bulk/2.scf/: etot.input
example/Si_Al/2.hse/2.supercell/2.scf/: etot.input
example/Si_Al/3.escan/1.bulk/: etot.input
example/Si_Al/3.escan/2.supercell_08a/: IN.KPT  etot.input  vwr.Al.UPF
scripts/: ACVR_PWmat2Escan.py  VR_PWmat2Escan.py  diff_vatom_viavatom.py  gen_uniformvr.py  mksupcl_alloy.py  patch_alloy.py  plot_V_single.py  shift_im_atom.py  template_E2E.py
src/potpatch/: __init__.py  __main__.py  atompos_coin.py  check_atompos.py  constant.py  correction.py  datatype.py  diff_vatom.py  errors.py  objects.py  parse.py  patch.py  shift.py  supercell.py  utils.py
